@@ -58,6 +58,7 @@ class IMP_Ajax_Application extends Horde_Core_Ajax_Application
         case $registry::VIEW_BASIC:
         case $registry::VIEW_DYNAMIC:
             $this->addHandler('IMP_Ajax_Application_Handler_Common');
+            $this->addHandler('IMP_Ajax_Application_Handler_Contacts');
             $this->addHandler('IMP_Ajax_Application_Handler_ComposeAttach');
             $this->addHandler('IMP_Ajax_Application_Handler_Draft');
             $this->addHandler('IMP_Ajax_Application_Handler_Dynamic');
